[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dockside-cli"
version = "0.1.0"
description = "CLI for managing Dockside devtainers"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "Apache-2.0" }
keywords = ["dockside", "devtainer", "cli", "docker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]
# Zero external dependencies – only the Python 3 standard library is required.
dependencies = []

[project.scripts]
dockside = "dockside_cli:main"

[tool.setuptools]
py-modules = ["dockside_cli"]
